# server

./: .env.example  .gitignore  AGENTS.md  README.md  competency-evaluation-result.txt  embedding-test-result.txt  firebase-tip.md  presentation_prompt.md  pyproject.toml  requirements.txt  todo.txt
chatgpt_export/: README_library_usage.md  benchmark_final.py  chat-standard.html  chat-standard.json  chatgpt_to_json.py
docs/: ARCHITECTURE.md  FEATURES.md  checklist.md  competency-evaluation-implementation.md  database-schema.md  firebase-auth-firestore-user-sync.md  personas-fix-merge-analysis.md  rag-system-implementation-plan.md
docs/api-doc/: README.md  auth-sync.md  auth-verify.md  persona-input-detailed-flow.md  persona-input.md
docs/miscl/: claim.md  conversation-rag-integration.md  feature-persona-input.md  firebase-tip.md  json-file-checker-guide.md  large-file-upload-guide.md  storage-upload.md  역량평가 테스트 결과.txt
job_cheat/: README.md  check_json_files.py  manage.py  runserver_asgi.py  test_html_converter.py  view_storage_json.py
job_cheat/api/: README_API_App.md  admin.py  authentication.py  models.py  serializers.py  tests.py  urls.py  views.py
job_cheat/core/: README_Core_Services.md  authentication.py  serializers.py  utils.py
job_cheat/cover_letters/: README_Cover_Letters_App.md  apps.py  serializers.py  urls.py  views.py
job_cheat/docs/: README_Database_Schema.md
job_cheat/interviews/: README_Interviews_App.md  apps.py  urls.py  (+2 more)
samples/: persona_input_sample.html
scripts/: upload_persona_html_test.py
tools/: convert_job_standards.py
(+63 files in other folders)
