[project]
name = "job-cheat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.3",
    "firebase-admin>=6.5",
    "python-dotenv>=1.0",
    "selectolax>=0.3.34,<0.4",
]
